tests/sumo/tls/wauts/errors/cross3ltl_error_missing_switchtime/errors.sumo
Error: Attribute 'time' is missing in definition of wautSwitch 'w1'.
Quitting (on error).
